--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ Secondary Color (Turquese): #93CBC3;
 white: #FFFFFF
 black: #000000
 */
-  {
-  box-sizing: border-box;
+* {
+box-sizing: border-box;
 }
 
 body {
@@ -21,12 +21,11 @@ body {
 header {
   background-color: #fafafa;
   padding: 10px 0;
-  margin: 10px;
   -webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.5);
-  position: center;
   width: 100%;
+  Text-align: center;
 }
 
 main {
@@ -69,7 +68,6 @@ h4 {
 }
 
 img {
-  position: center;
   width: 100%;
 }
 
@@ -100,10 +98,7 @@ a:active {
 }
 
 .logo {
-  width: 250px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100px;
 }
 
 .button {
@@ -124,23 +119,12 @@ a:active {
   text-decoration: none;
 }
 
-.mainbutton {
-  width: 250px;
-  display: block;
-  text-align: center;
-  padding: 5px;
-  padding-top: 90px;
-  color: #93CBC3;
-  /***** I them to be in the exact middle both - web & phone **********************************************/
-}
-
 .icon {
   display: inline-block;
-  width: 3em;
   text-align: center;
-  padding: 15px;
-  /***** I WANT TO MAKE IT BIGGER**********************************************/
-}
+  padding: 10px;
+    padding-top: 35px;
+  font-size: 3em}
 
 /* Layout styling */
 .container {
@@ -182,6 +166,7 @@ nav>ul {
 
 nav>ul>li {
   display: inline-block;
+  margin: 0 15px;
 }
 
 nav>ul>li>a:visited {
