--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,17 @@ Secondary Color (Turquese): #93CBC3;
 white: #FFFFFF
 black: #000000
 */
+
 * {
-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   font-family: 'Open Sans';
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   line-height: 1.4;
   color: #000000;
-  margin: auto;
 }
 
 header {
@@ -25,16 +25,16 @@ header {
   -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.5);
   width: 100%;
-  Text-align: center;
+  text-align: center;
+
 }
 
 main {
-  padding-top: 20px;
+  padding-top: 10px;
 }
 
 footer {
   text-align: center;
-  bottom: 0;
   padding-top: 133px;
   padding: 10px 0;
 }
@@ -48,13 +48,14 @@ h4 {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 5em;
   font-weight: 700;
 }
 
 h2 {
   font-size: 2.25em;
   font-weight: 700;
+  text-align: center;
 }
 
 h3 {
@@ -84,34 +85,36 @@ a {
 }
 
 a:visited {
-  color: ##ea8824;
+  color: #93CBC3;
 }
 
 a:hover,
 a:focus {
-  color: #93CBC3;
+  color: #EA8824;
   text-decoration: underline;
 }
 
 a:active {
-  color: ##93CBC3;
+  color: #EA8824;
 }
 
 .logo {
-  width: 100px;
+  width: 120px;
+  padding-bottom: 20px
 }
+
 
 .button {
   display: inline-block;
+  color: #EA8824;
+  background-color: #00000;
   font-weight: 400;
+  text-decoration: none;
   padding: 10px;
   border-radius: 3px;
-  transition: 0.2s opacity;
-  text-decoration: none;
-  background-color: transparent;
-  color: #93CBC3;
+  transition: 0.2s solid #EA8824;
   text-transform: uppercase;
-  border: 2px solid #93CBC3;
+  transition-duration: 0.2s; opacity;
 }
 
 .button:hover {
@@ -123,12 +126,13 @@ a:active {
   display: inline-block;
   text-align: center;
   padding: 10px;
-    padding-top: 35px;
-  font-size: 3em}
+  padding-top: 35px;
+  font-size: 3em
+}
 
 /* Layout styling */
 .container {
-  padding: 0 15px;
+  padding: 0 10px;
   margin-left: auto;
   margin-right: auto;
   max-width: 1200px;
@@ -138,6 +142,12 @@ a:active {
   margin: 25px 0;
 }
 
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 .profile {
   width: 250px;
   display: block;
@@ -145,9 +155,25 @@ a:active {
   margin-right: auto;
 }
 
+
+#hero {
+	display: block;
+	width: 80%;
+	margin: 50px auto;
+}
+
 #hero h1 {
-  text-align: center center;
-  background-color: #fafafa
+  text-align: center;
+  margin-top: 250px
+}
+#hero p {
+  text-align: center;
+  margin-bottom: 250px; auto;
+  font-size: 2em;
+}
+
+#hero span {
+  display: block;
 }
 
 #work {
@@ -175,3 +201,149 @@ nav>ul>li>a:visited {
   font-weight: 700;
   color: #4a4a4a;
 }
+/*START BERLIN ANIMATION =========================================*/
+
+@keyframes color-change {
+  0% {fill: #edc655;}
+  50% {fill: #fcffad;}
+  100% {fill: #f76414;}
+}
+
+.sun {
+  animation-duration: 4s;
+  animation-name: color-change;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+@keyframes cloud-move {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
+}
+
+.cloud-front {
+  animation-duration: 15s;
+  animation-name: cloud-move;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+
+@keyframes cloud-move-reverse {
+  from {transform: translate(446px,48px);}
+  to {transform: translate(100px, 48px);}
+}
+
+/*END BERLIN ANIMATION*=================================/
+
+
+/* START HERO ANIMATION************************/
+#hero h1 {
+	animation-name: fadeIn;
+	animation-duration: 0.6s;
+	animation-timing-function: ease-out;
+}
+
+#hero p {
+	animation-name: fadeIn;
+	animation-duration: 0.8s;
+	animation-timing-function: ease-out;
+}
+
+
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+		transform: translateY(400px);
+	}
+
+	to {
+		opacity: 1;
+		transform: translateY(0px);
+	}
+
+}
+
+/*END HERO ANIMATION*=================================/
+
+
+.cloud-back {
+  animation: 30s cloud-move-reverse infinite alternate linear;
+}
+
+/* ==============================
+Medium devices (640px and larger)
+================================= */
+@media only screen and (min-width: 640px) {
+  header {
+    text-align: center;
+    padding: 70px
+  }
+
+  nav {
+    width: auto;
+    float: right margin-top: 4px;
+  }
+}
+
+.col-md-6 {
+  width: 50%;
+}
+
+[class*="col-"] {
+  float: left;
+  padding: 10px;
+}
+
+.col-md-4 {
+  width: 33%;
+}
+
+.col-md-6 {
+  width: 50%;
+}
+}
+
+/* ==============================
+Large devices (1024px or larger)
+================================= */
+@media only screen and (min-width: 1024px) {}
+
+[class*="col-lg-"] {
+  float: left;
+  padding: 20px;
+}
+
+.col-lg-4 {
+  width: 33%;
+}
+
+.col-lg-5 {
+  width: 41.66%;
+}
+
+.col-lg-6 {
+  width: 50%;
+}
+
+.col-lg-7 {
+  width: 58.33%;
+}
+}
+
+.container {
+  max-width: 640px;
+  margin: 0 auto;
+}
+
+/* ==============================
+X-large devices (1440px or larger)
+================================= */
+@media only screen and (min-width: 1440px) {}
+
+/* ==============================
+Extra-large devices (1920px or larger)
+================================= */
+@media only screen and (min-width: 1920px) {}
