--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ Secondary Color (Turquese): #93CBC3;
 white: #FFFFFF
 black: #000000
 */
-
 * {
   box-sizing: border-box;
 }
@@ -14,7 +13,7 @@ body {
   font-family: 'Open Sans';
   font-size: 18px;
   font-weight: 400;
-  line-height: 1.4;
+  line-height: 1.7;
   color: #000000;
 }
 
@@ -25,12 +24,12 @@ header {
   -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.5);
   width: 100%;
+  position: fixed;
   text-align: center;
-
 }
 
 main {
-  padding-top: 10px;
+  padding-top: 96px;
 }
 
 footer {
@@ -48,7 +47,7 @@ h4 {
 }
 
 h1 {
-  font-size: 5em;
+  font-size: 4em;
   font-weight: 700;
 }
 
@@ -100,9 +99,8 @@ a:active {
 
 .logo {
   width: 120px;
-  padding-bottom: 20px
+  padding-bottom: 20px;
 }
-
 
 .button {
   display: inline-block;
@@ -114,7 +112,8 @@ a:active {
   border-radius: 3px;
   transition: 0.2s solid #EA8824;
   text-transform: uppercase;
-  transition-duration: 0.2s; opacity;
+  transition-duration: 0.2s;
+  opacity;
 }
 
 .button:hover {
@@ -155,25 +154,18 @@ a:active {
   margin-right: auto;
 }
 
-
-#hero {
-	display: block;
-	width: 80%;
-	margin: 50px auto;
-}
-
 #hero h1 {
   text-align: center;
-  margin-top: 250px
 }
+
 #hero p {
   text-align: center;
-  margin-bottom: 250px; auto;
-  font-size: 2em;
+  font-size: 1.3em;
 }
 
 #hero span {
   display: block;
+  font-size: 0.5em;
 }
 
 #work {
@@ -185,6 +177,10 @@ a:active {
   padding-bottom: 15px;
 }
 
+.section {
+  padding: 30px 0;
+}
+
 nav>ul {
   list-style-type: none;
   padding: 0;
@@ -192,21 +188,39 @@ nav>ul {
 
 nav>ul>li {
   display: inline-block;
-  margin: 0 15px;
+  margin: 0 5px;
+
 }
 
-nav>ul>li>a:visited {
-  padding: 0 15px;
+nav a {
+  text-decoration: none;
+  padding: 0 10px;
   text-transform: uppercase;
   font-weight: 700;
   color: #4a4a4a;
 }
-/*START BERLIN ANIMATION =========================================*/
+nav a:hover
+nav a:focus{
+  text-decoration: none;
+}
 
+nav>ul>li>a:visited {
+  color: #4a4a4a;
+}
+
+/*START BERLIN ANIMATION =========================================*/
 @keyframes color-change {
-  0% {fill: #edc655;}
-  50% {fill: #fcffad;}
-  100% {fill: #f76414;}
+  0% {
+    fill: #edc655;
+  }
+
+  50% {
+    fill: #fcffad;
+  }
+
+  100% {
+    fill: #f76414;
+  }
 }
 
 .sun {
@@ -218,8 +232,13 @@ nav>ul>li>a:visited {
 }
 
 @keyframes cloud-move {
-  from {transform: translate(0,50px);}
-  to {transform: translate(200px,50px);}
+  from {
+    transform: translate(0, 50px);
+  }
+
+  to {
+    transform: translate(200px, 50px);
+  }
 }
 
 .cloud-front {
@@ -230,10 +249,14 @@ nav>ul>li>a:visited {
   animation-timing-function: linear;
 }
 
-
 @keyframes cloud-move-reverse {
-  from {transform: translate(446px,48px);}
-  to {transform: translate(100px, 48px);}
+  from {
+    transform: translate(446px, 48px);
+  }
+
+  to {
+    transform: translate(100px, 48px);
+  }
 }
 
 /*END BERLIN ANIMATION*=================================/
@@ -241,29 +264,27 @@ nav>ul>li>a:visited {
 
 /* START HERO ANIMATION************************/
 #hero h1 {
-	animation-name: fadeIn;
-	animation-duration: 0.6s;
-	animation-timing-function: ease-out;
+  animation-name: fadeIn;
+  animation-duration: 0.6s;
+  animation-timing-function: ease-out;
 }
 
 #hero p {
-	animation-name: fadeIn;
-	animation-duration: 0.8s;
-	animation-timing-function: ease-out;
+  animation-name: fadeIn;
+  animation-duration: 0.8s;
+  animation-timing-function: ease-out;
 }
 
-
 @keyframes fadeIn {
-	from {
-		opacity: 0;
-		transform: translateY(400px);
-	}
+  from {
+    opacity: 0;
+    transform: translateY(400px);
+  }
 
-	to {
-		opacity: 1;
-		transform: translateY(0px);
-	}
-
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 
 /*END HERO ANIMATION*=================================/
@@ -278,64 +299,62 @@ Medium devices (640px and larger)
 ================================= */
 @media only screen and (min-width: 640px) {
   header {
-    text-align: center;
-    padding: 70px
+    text-align: unset;
   }
 
   nav {
     width: auto;
-    float: right margin-top: 4px;
+    float: right;
+    margin-top: 4px;
   }
-}
 
-.col-md-6 {
-  width: 50%;
-}
-
-[class*="col-"] {
-  float: left;
-  padding: 10px;
-}
+  .logo {
+    padding-bottom: 0
+  }
 
 .col-md-4 {
-  width: 33%;
+width: 33.33%;
 }
+  .col-md-6 {
+    width: 50%;
+  }
 
-.col-md-6 {
-  width: 50%;
-}
+  [class*="col-"] {
+    float: left;
+    padding: 10px;
+  }
+
 }
 
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
-@media only screen and (min-width: 1024px) {}
+@media only screen and (min-width: 1024px) {
+  [class*="col-lg-"] {
+    float: left;
+    padding: 20px;
+  }
 
-[class*="col-lg-"] {
-  float: left;
-  padding: 20px;
-}
+  .col-lg-4 {
+    width: 33%;
+  }
 
-.col-lg-4 {
-  width: 33%;
-}
+  .col-lg-5 {
+    width: 41.66%;
+  }
 
-.col-lg-5 {
-  width: 41.66%;
-}
+  .col-lg-6 {
+    width: 50%;
+  }
 
-.col-lg-6 {
-  width: 50%;
-}
+  .col-lg-7 {
+    width: 58.33%;
+  }
 
-.col-lg-7 {
-  width: 58.33%;
-}
-}
-
-.container {
-  max-width: 640px;
-  margin: 0 auto;
+  .container {
+    max-width: 1000px;
+    margin: 0 auto;
+  }
 }
 
 /* ==============================
