--- a/css/style.css
+++ b/css/style.css
@@ -159,11 +159,11 @@ a:active {
 }
 
 #hero h1 {
-  text-align: center;
+  text-align: left;
 }
 
 #hero p {
-  text-align: center;
+  text-align: left;
   font-size: 1.3em;
 }
 
