--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*
 Colors used:
-Primary Color (Gray - background): #fafafa;
+  Primary Color (Gray - background): #fafafa;
 Secondary Color (Turquese): #93CBC3;
 white: #FFFFFF
 black: #000000
@@ -18,14 +18,14 @@ body {
 }
 
 header {
-  background-color: #fafafa;
-  padding: 10px 0 4px;
+  background-color: #000000;
+  padding: 10px 0 0px;
   -webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.5);
   width: 100%;
   position: fixed;
-}
+  }
 
 main {
   padding-top: 185px;
@@ -41,19 +41,24 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: 'Libre Caslon Text';
+  font-family: 'Open Sans';
   line-height: 1.7;
 }
 
 h1 {
   font-size: 4em;
   font-weight: 700;
+  text-align: center;
+  color: #FFFFFF
+
+
 }
 
 h2 {
   font-size: 2.25em;
   font-weight: 700;
   text-align: center;
+  color: #000000
 }
 
 h3 {
@@ -62,8 +67,16 @@ h3 {
 }
 
 h4 {
-  font-size: 1.35em;
+  font-size: 1.10em;
   font-weight: 400;
+  text-align: center;
+}
+
+h5 {
+  font-size: 1.05em;
+  font-weight: 400;
+  color: #ffffff;
+  text-align: center;
 }
 
 img {
@@ -97,8 +110,8 @@ a:active {
 }
 
 .logo {
-  width: 120px;
-  padding-bottom: 20px;
+  width: 70px;
+  padding-bottom: 0px;
 }
 
 .button {
@@ -132,7 +145,7 @@ a.active {
 }
 
 .home {
-  background-image: url("../img/vidar-nordli-mathisen-QkBrfIhv77Y-unsplash.jpg");
+background-image: url("../img/background/backgroundindex.jpg");
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
@@ -140,7 +153,7 @@ background-position: center;
 
 .icon {
   display: inline-block;
-  text-align: center;
+  text-align: left;
   padding: 10px;
   padding-top: 35px;
   font-size: 3em
@@ -148,7 +161,6 @@ background-position: center;
 
 /* Layout styling */
 .container {
-  padding: 0 10px;
   margin-left: auto;
   margin-right: auto;
   max-width: 1200px;
@@ -177,7 +189,7 @@ background-position: center;
 }
 
 #hero h1 {
-  text-align: left;
+  text-align: center;
 }
 
 #hero p {
@@ -187,7 +199,7 @@ background-position: center;
 
 #hero span {
   display: block;
-  font-size: 0.5em;
+  font-size: 0.7em;
 }
 
 #work {
@@ -354,7 +366,8 @@ Medium devices (640px and larger)
 @media only screen and (min-width: 640px) {
   header {
     text-align: unset;
-  }
+  padding: 0px;
+}
 main  {
   padding-top: 113px;
     }
