--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
   font-size: 18px;
   font-weight: 400;
   line-height: 1.7;
-  }
+}
 
 header {
   background-color: #000000;
@@ -23,7 +23,6 @@ header {
   -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.5);
 }
-
 
 footer {
   text-align: center;
@@ -117,7 +116,7 @@ a:active {
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
-    transition: 0.3s;
+  transition: 0.3s;
   text-transform: uppercase;
   transition-duration: 0.2s;
 }
@@ -147,7 +146,6 @@ a.active {
   background-repeat: no-repeat;
   background-position: center;
 }
-
 
 .icon {
   display: inline-block;
@@ -193,7 +191,8 @@ a.active {
 #hero h1 {
   text-align: center;
   margin-bottom: 0;
-  }
+}
+
 .home h1 {
   line-height: 1.2;
 }
@@ -334,6 +333,7 @@ nav>ul>li>a:visited {
   animation-duration: 0.6s;
   animation-timing-function: ease-out;
 }
+
 #hero h5 {
   animation-name: fadeIn;
   animation-duration: 0.6s;
@@ -351,7 +351,6 @@ nav>ul>li>a:visited {
   animation-duration: 0.6s;
   animation-timing-function: ease-out;
 }
-
 
 @keyframes fadeIn {
   from {
@@ -379,19 +378,20 @@ Medium devices (640px and larger)
   header {
     text-align: unset;
     padding: 0 0 200px;
-    }
+  }
 
-    works {
-      text-align: unset;
+  works {
+    text-align: unset;
+  }
 
-      }
-    .home {
-      max-width: 80%;
-    margin: -150px auto 0;}
+  .home {
+    max-width: 80%;
+    margin: -150px auto 0;
+  }
 
-.reverse [class*="col-"] {
-  float: right;
-}
+  .reverse [class*="col-"] {
+    float: right;
+  }
 
   .navtoggle.responsive nav {
     padding: 0;
